fix: criação do banco de dados sqlite e migrações iniciais

--- a/AdaTech.WebAPI.SistemaVendas/appsettings.json
+++ b/AdaTech.WebAPI.SistemaVendas/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SistemaVendasDB.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
