refactor: reestruturar o projeto para seguir o DDD

--- a/AdaTech.WebAPI.SistemaVendas/AdaTech.WebAPI.SistemaVendas.csproj
+++ b/AdaTech.WebAPI.SistemaVendas/AdaTech.WebAPI.SistemaVendas.csproj
@@ -24,7 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AdaTech.WebAPI.Aplicacoes\AdaTech.WebAPI.Aplicacoes.csproj" />
     <ProjectReference Include="..\AdaTech.WebAPI.DadosLibrary\AdaTech.WebAPI.DadosLibrary.csproj" />
+    <ProjectReference Include="..\AdaTech.WebAPI.Entities\AdaTech.WebAPI.Entities.csproj" />
   </ItemGroup>
 
 </Project>
