--- a/AdaTech.WebAPI.DadosLibrary/AdaTech.WebAPI.DadosLibrary.csproj
+++ b/AdaTech.WebAPI.DadosLibrary/AdaTech.WebAPI.DadosLibrary.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AdaTech.WebAPI.Entities\AdaTech.WebAPI.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
